[package]
name = "lanceverb"
version = "0.3.0"
authors = ["josh, mitchell.nordine@gmail.com"]
description = "A super-fast mono-to-stereo plate reverberator."
edition = "2021"
rust-version = "1.59"
readme = "README.md"
keywords = ["reverb", "dsp", "audio", "effect", "stereo"]
license = "MIT"
repository = "https://github.com/MindBuffer/lanceverb.git"

[dependencies]
libm = "0.2.6"
dsp-chain = { optional = true, git = "https://github.com/RustAudio/dsp-chain.git" }

[features]
default = []

[dev-dependencies]
portaudio = "0.6.4"
