[package]
name = "lanceverb"
version = "0.4.0"
authors = [
    "Joshua Batty <joshpbatty@gmail.com>",
    "mitchmindtree <mitchell.nordine@gmail.com>",
    "Oliver Rockstedt <info@sourcebox.de>",
]
description = "A super-fast mono-to-stereo plate reverberator."
edition = "2021"
rust-version = "1.63"
readme = "README.md"
keywords = ["reverb", "dsp", "audio", "effect", "stereo"]
categories = ["no-std", "multimedia::audio"]
license = "MIT"
repository = "https://github.com/sourcebox/lanceverb.git"

[dependencies]
libm = "0.2.15"

[features]
default = []
